@@ -20,6 +20,8 @@ git-annex (8.20201128) UNRELEASED; urgency=medium
   * Fix reversion in 8.20201116 that made include= and exclude= in
     preferred/required content expressions match a path relative to the
     current directory, rather than the path from the top of the repository.
+  * importfeed: Avoid using youtube-dl when a feed does not contain an
+    enclosure, but only a link to an url which youtube-dl does not support.
 
  -- Joey Hess <id@joeyh.name>  Mon, 30 Nov 2020 12:55:49 -0400
 
